--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@ body {
     margin:0;
 	padding:0;
 	height:100%;
-	background: url('C:/Users/Steph/Downloads/sfondo5.png');
+	background: url('https://c1.staticflickr.com/5/4271/34396908014_21a901384f_o.png');
 	text-align: center;
 	font-family: 'Overlock', Verdana;
 }
